--- a/Amol/courses.css
+++ b/Amol/courses.css
@@ -36,7 +36,7 @@ body{
   margin: auto;
   display: grid;
   grid-template-rows: auto;
-  gap: 5%;
+  gap: 2%;
   height: 1fr;
 
   box-sizing: border-box;
@@ -60,12 +60,15 @@ body{
   width: 50%;
   box-sizing: border-box;
   margin-right: 2%;
+  box-sizing: border-box;
+  
 }
 
 #course-image>img {
   width: 100%;
   height: 100%;
   border-radius: 7%;
+  
 }
 
 #course-info {
