--- a/Ashish/testimonial.css
+++ b/Ashish/testimonial.css
@@ -14,6 +14,9 @@ body {
   justify-content: space-between;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  position: sticky;
+    top: 0;
+    background-color: white;
   }
   
   .nav > div:nth-child(1) {
