--- a/Jahir/login.css
+++ b/Jahir/login.css
@@ -1,155 +1,109 @@
-*{
-    margin: 0px;
-    padding: 0px;
+body {
+    background-image: url("background1.jpg");
+    background-repeat: no-repeat;
+    background-size: 1535px 800px;
+}
+
+#login {
+    margin-left: 200px;
+    margin-top: 50px;
+    border-radius: 20px;
+    width: 450px;
+    background-color: white;
+    padding: 30px;
     box-sizing: border-box;
 }
 
-body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: #f5f5f5;
+#login>div:nth-child(2) {
+    margin-bottom: 10px;
 }
 
 
-/*------> nav bar starts<------*/
-#cont1 {
-    top: 0;
-    width: 100%;
+form {
     display: flex;
-    height: 80px;
-    justify-content: space-between;
-    background-color:#f5f5f5;
-    color: black;
-    position: sticky;
-    padding: 0 20px;
-    font-size: 20px;
+    flex-direction: column;
+    row-gap: 10px;
 }
-#logo {
-    width: 10%;
-    padding-left: 10px;
-  }
-  
-#logo h1 {
-    padding-top: 10%;
-    font-size: 200%;
-    margin: auto;
-    font-family: 'Bruno Ace SC', cursive;
+
+form>input {
+    padding: 10px;
+    border: solid 1px grey;
+    border-radius: 10px;
+}
+
+form>input:nth-child(3) {
+    background-color: rgb(32, 32, 173);
+    color: whitesmoke;
+    font-size: larger;
+    border-radius: 20px;
+}
+
+form>input:nth-child(3):focus {
+    transform: scale(0.95);
+}
+
+#btn{
+    background-color: blue;
+    color: white;
+    font-size: 18px;
     cursor: pointer;
 }
-
-#nav1 {
-    width: 80%;
-    height: 80px;
-}
-#nav1 ul{
-    width: 80%;
+#other {
     display: flex;
-    padding-top: 30px;
-    justify-content: space-evenly;
-    align-items: center;
-}
-#nav1 ul li{
-    display: inline-block;
-}
-#nav1 ul li a{
-    text-decoration: none;
-}
-
-#menu {
-    width: 35px;
-    height: 30px;
-    margin: 30px 0 20px 20px;
-    cursor: pointer;
-    z-index: 100;
-    display: none;
-}
-.bar{
-    height: 5px;
-    width: 100%;
-    background-color:black;
-    display: block;
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-#bar1{
-    transform: translateY(-4px);
-    background-color:black;
-}
-#bar3{
-    transform: translateY(4px);
-    background-color:black;
-}
-
-
-@media all and (min-width:481px) and (max-width:768px){
-    #nav1{
-       display: none;
-    }
-    #menu {
-        display: block;
-    }
-}
-@media (max-width:480px){
-    #nav1{
-       display: none;
-    }
-    #menu {
-        display: block;
-        height: 2px;
-    }
-}
-
-/*------> nav bar ends <------*/
-.login-form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 100%;
-    max-width: 450px;
-    background: #fff;
-    padding: 20px 30px;
-    box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
-    border-radius: 5%;
-}
-
- .form-title {
-    font-family: "Montserrat",sans-serif;
+    flex-direction: column;
+    margin-bottom: 10px;
     text-align: center;
-    font-size: 30px;
-    font-weight: 600;
-    margin: 20px 0px 3px;
-    color: #111;
+    align-items: center;
+    gap: 10px;
 }
 
-.form-input {
-    margin: 10px 0px;
+#other>a {
+    text-decoration: none;
+    border: grey solid 1px;
+    width: 300px;
+    padding: 10px;
+    border-radius: 20px;
+    text-align: center;
+    align-items: center;
+    vertical-align: middle;
+    justify-content: center;
+    align-content: center;
 }
 
-.form-input label,
+p {
+    text-align: center;
+}
+
+img {
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+}
+
+#logo{
+   text-align: center;
+   margin-top: 20px;
+}
+#logo>img {
+    width: 150px;
+    height: 50px;
+}
+
 .captcha label {
     display: block;
-    font-size: 18px;
+    font-size: 15px;
     color: #111;
     margin-bottom: 5px;
 }
-
-.form-input input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #888;
-    font-size: 18px;
-}
-
 .captcha {
     margin: 15px 0px;
 }
-
 .preview {
     color: #555;
     width: 100%;
     text-align: center;
-    height: 40px;
-    line-height: 40px;
+    height: 30px;
+    line-height: 20px;
     letter-spacing: 8px;
     border: 1px dashed #888;
     font-family: "monospace";
@@ -180,50 +134,28 @@ body {
     font-size: 15px;
 }
 
- #login-btn {
-    margin-top: 5px;
-    width: 100%;
-    padding: 10px;
-    border: none;
-    outline: none;
-    font-size: 20px;
-    text-transform: uppercase;
-    background: #4c81ff;
-    color: #fff;
-    cursor: pointer;
-}
-
-#signupLink{
-    text-decoration: none;
-    color: red;
-}
-#circleDiv{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  width:100%;
-  height: 7rem;
-  margin-top: 3rem;
-  display: none;
-}
-
-#circle{
-    width: 2rem;
-    height: 2rem;
-    border: 1px solid black;
-    border-top-color: transparent;
-    border-right-color: transparent;
+@media screen and (max-width:451px) {
+   
+    #login {
+        margin-left: 1%;
+        margin-top: 15%;
+        border-radius: 20px;
+        height: 100%;
+        width: 90%;
+        background-color: white;
+        padding: 30px;
+        box-sizing: border-box;
     
-    border-radius: 50%;
-    animation: rotate 1s linear infinite;
-}
-
-@keyframes rotate{
-    0%{
-        transform: rotate(0deg);
     }
-    100%{
-        transform: rotate(360deg);
+    #logo{
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 0;
+     }
+    #logo>img {
+        width: 150px;
+        height: 50px;
+      
+    
     }
 }
