--- a/Jahir/register.css
+++ b/Jahir/register.css
@@ -18,72 +18,112 @@ body{
 }
 
 /*------> nav bar Starts<------*/
+/*------> nav bar <------*/
 
-#cont1 {
-    top: 0;
+.nav {
     width: 100%;
     display: flex;
-    height: 80px;
     justify-content: space-between;
-    background-color:#f5f5f5;
-    color: black;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     position: sticky;
-    padding: 0 20px;
-    font-size: 20px;
-}
-#logo {
-    width: 10%;
+    top: 0;
+    background-color: white;
+  }
+  
+  .nav > div:nth-child(1) {
+    width: 15%;
     padding-left: 10px;
   }
   
-#logo h1 {
-    padding-top: 10%;
-    font-size: 200%;
+  .nav > div:nth-child(1) a{
+    color: black;
+    text-decoration: none;
+  }
+  
+  .nav > div:nth-child(1)  h1 {
+    font-size: 230%;
     margin: auto;
     font-family: 'Bruno Ace SC', cursive;
     cursor: pointer;
-}
-
-#nav1 {
-    width: 70%;
-    height: 80px;
-}
-#nav1 ul{
-    width: 80%;
+  }
+  
+  .nav > div:nth-child(2) {
+    width: 40%;
     display: flex;
-    padding-top: 30px;
-    justify-content: space-evenly;
-    align-items: center;
-}
-#nav1 ul li {
-    display: inline-block;
-}
-
-#menu {
-    width: 35px;
-    height: 30px;
-    margin: 30px 0 20px 20px;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  
+  .nav > div:nth-child(2) > a {
+    color: black;
+    text-decoration: none;
+  }
+  
+  .nav > div:nth-child(2) > a:hover {
+    color: red;
+    font-weight: bold;
+  }
+  
+  .nav  button {
+    width: 120px;
+    height: 65px;
+    border: none;
+    color: white;
+    font-family: "Poppins", sans-serif;
+    background-color: black;
+    font-size: 18px;
     cursor: pointer;
-    z-index: 100;
-    display: none;
-}
-.bar{
-    height: 5px;
+  }
+  
+  .nav  button:hover {
+    background-color: white;
+    color: black;
+    border: solid 0.5px;
+  }
+  
+  /* userhome and user page */
+  
+  #logout {
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+    color: red;
+  }
+  
+  #user{
+    width: 70%;
+    margin: auto;
+    padding: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  }
+  
+  #user >div:nth-child(1){
+    display: flex;
+    justify-content: end;
+    margin-bottom: 20px;
+  }
+  
+  #user > div:nth-child(1) > div{
     width: 100%;
-    background-color:black;
-    display: block;
-    border-radius: 5px;
-    transition: 0.3s ease;
-}
-#bar1{
-    transform: translateY(-4px);
-    background-color:black;
-}
-#bar3{
-    transform: translateY(4px);
-    background-color:black;
-}
-
+  }
+  
+  #user > div:nth-child(1) > div:nth-child(2){
+    justify-content: right;
+  }
+  
+  #user >div:nth-child(1) img{
+    width: 50%;
+  }
+  
+  #username,#email{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  /*------> nav bar <------*/
 
 /*------> nav bar ends <------*/
 
@@ -194,20 +234,64 @@ body{
     color: #f5f5f5;
 }
 
-@media all and (min-width:481px) and (max-width:768px){
-    #nav1{
-       display: none;
+@media screen and (min-width: 200px) and (max-width: 770px) {
+    body {
+      width: 100%;
     }
-    #menu {
-        display: block;
+    .nav {
+      width: 100%;
+      justify-content: space-between;
+    }
+    .nav > div:nth-child(1) {
+      font-size: 20px;
+      width: 40%;
+    }
+  
+    .nav > div:nth-child(1) h1 {
+      font-size: 28px;
+    }
+    .nav > div:nth-child(2) {
+      display: none;
+    }
+  
+    /*------> nav bar <------*/
+  
+    #user{
+      width: 80%;
+      padding: 20px;
+    }
+  
+    #user img{
+      width: 50%;
+    }
+  
+    #username,#email{
+      flex-direction: column;
+    }
+
+    #header  h1{
+        font-size: 25px;
+    }
+    #header > img{
+        width: 20%;
+    }
+    #cont > h2{
+        margin-top: 50px;
+        margin-top: 12px;
+        margin-bottom: 20px;
+    }
+    #personal {
+        grid-template-columns: repeat(1 ,1fr);
+    }
+    #parent {
+        grid-template-columns: repeat(1,1fr);
+    }
+    #previousStandards {
+        grid-template-columns: repeat(1 ,1fr);
     }
 }
-@media (max-width:480px){
-    #nav1{
-       display: none;
-    }
-    #menu {
-        display: block;
-        height: 2px;
+@media screen and (min-width: 771px) and (max-width: 1250px){
+    #personal {
+        grid-template-columns: repeat(2 ,1fr);
     }
 }
