--- a/Jahir/register.css
+++ b/Jahir/register.css
@@ -6,15 +6,9 @@
 
 body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-*{
-    box-sizing: border-box;
-    text-decoration: none;
-}
-body{
+    background-image: url(./bg.jpg);
     margin: 0;
     padding: 0;
-    font-family: 'PT Sans',sans-serif;
 }
 
 /*------> nav bar Starts<------*/
@@ -127,13 +121,6 @@ body{
 
 /*------> nav bar ends <------*/
 
-#cont {
-    width: 80%;
-    margin: auto;
-    background-color: transparent;
-    padding-left: 20px;
-    padding-bottom: 20px;
-}
 #header {
     margin-top: 50px;
     display: flex;
@@ -146,93 +133,191 @@ body{
     font-size: 40px;
     color: rgb(101, 101, 190);
 }
-#personal {
-    display: grid;
-    grid-template-columns: repeat(3 ,1fr);
-    width: 100%;
-    gap: 10px 20px;
-    margin: auto;
-}
-#personal div{
-    display: flex;
-    flex-direction: column;
-}
-#parent {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    width: 100%;
-    gap: 10px 20px;
-    margin: auto;
-}
-#parent div{
-    display: flex;
-    flex-direction: column;
+
+*{
+  box-sizing: border-box;
 }
 
-#previousStandards {
-    display: grid;
-    grid-template-columns: repeat(2 ,1fr);
-    width: 100%;
-    gap: 10px 20px;
-    margin: auto;
-    
-}
-#cont > h2{
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-#previousStandards div{
-    display: flex;
-    flex-direction: column;
-}
-#parent input {
-    width: 70%;
-    padding: 10px;
-    display: block;
-    font-size: 15px;
-    margin-bottom: 5px;
-}
-#previousStandards input{
-    width: 70%;
-    padding: 10px;
-    display: block;
-    font-size: 15px;
-    margin-bottom: 5px;
-}
-#personal input,
-#personal select {
-    width: 70%;
-    padding: 10px;
-    display: block;
-    font-size: 15px;
+body {
+  
 }
 
-#personal label {
-    margin-bottom: 5px;
+form{
+  display: flex;
+  flex-direction: column;
+  row-gap: 5px;
+  padding: 30px;
+  border-radius: 20px;
+  overflow: hidden;
+  gap: 10px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-#parent label {
-    margin-bottom: 5px;
+label,input{
+  display: block;
+  font-size: 15px;
 }
-#previousStandards label {
-    margin-bottom: 5px;
+select {
+  height: 40px;
+  width: 100%;
+  font-size: 15px;
 }
-#btn {
-    width: 100px;
-    height: 50px;
-    margin-top: 30px;
-    border-radius: 10px;
-    background-color: lightskyblue;
+input,select{
+  border: solid 1px grey;
+  border-radius: 7px;
+  /* padding: 5px; */
 }
-#btn a{
-    text-decoration: none;
-    font-size: 15px;
+input,textarea{
+  padding-left: 10px;
+  height: 40px;
 }
 
-#btn:hover{
-    cursor: pointer;
-    background-color:green;
-    color: #f5f5f5;
+textarea{
+  padding-top: 10px;
+  font-size: 15px;
 }
+#mainContainer {
+  width: 70%;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  margin: auto;
+  margin-top: 100px;
+  gap: 50px;
+}
+#formTwo{
+  display: none;
+}
+#alternatBTN{
+  display: flex;
+  justify-content: space-around;
+}
+
+#searchData{
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+}
+#updateBTN{
+  display: none;
+}
+.search{
+background-color: #c2fbd7;
+border-radius: 100px;
+box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+color: green;
+cursor: pointer;
+display: inline-block;
+font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+padding: 7px 20px;
+text-align: center;
+text-decoration: none;
+transition: all 250ms;
+border: 0;
+font-size: 16px;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+}
+
+.search:hover {
+box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+transform: scale(1.05) rotate(-1deg);
+}
+
+
+
+.submitBTN{
+width: 30%;
+appearance: none;
+background-color: #FFFFFF;
+border-radius: 40em;
+border-style: none;
+box-shadow: #ADCFFF 0 -12px 6px inset;
+box-sizing: border-box;
+color: #000000;
+cursor: pointer;
+display: inline-block;
+font-family: -apple-system,sans-serif;
+font-size: 15px;
+font-weight: 600;
+letter-spacing: -.24px;
+margin: 0;
+margin-top: 20px;
+outline: none;
+padding: 1rem 1.3rem;
+quotes: auto;
+text-align: center;
+text-decoration: none;
+transition: all .15s;
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+}
+
+.submitBTN:hover {
+background-color: #FFC229;
+box-shadow: #FF6314 0 -6px 8px inset;
+transform: scale(1.125);
+}
+
+.submitBTN:active {
+transform: scale(1.025);
+}
+
+@media (min-width: 768px) {
+.submitBTN{
+  font-size: 1.5rem;
+  padding: .75rem 2rem;
+}
+}
+
+@media (max-width:767px) {
+  #mainContainer{
+      grid-template-columns: repeat(1,1fr);
+  }
+  #containerForm{
+      width: 300px;
+      margin-left: 0;
+  }
+}
+
+.nextBTN {
+background-color: #fff;
+border: 0 solid #e2e8f0;
+border-radius: 1.5rem;
+box-sizing: border-box;
+color: #0d172a;
+cursor: pointer;
+display: inline-block;
+font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+font-size: 1.1rem;
+font-weight: 500;
+line-height: 1;
+padding: 1rem 1.6rem;
+text-align: center;
+text-decoration: none #0d172a solid;
+text-decoration-thickness: auto;
+transition: all .1s cubic-bezier(.4, 0, .2, 1);
+box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+margin-top: 20px;
+width: 40%;
+}
+
+.nextBTN:hover {
+background-color: #1e293b;
+color: #fff;
+}
+
+@media (min-width: 768px) {
+.nextBTN {
+  font-size: 1.125rem;
+  padding: 1rem 2rem;
+}
+}
+
 
 @media screen and (min-width: 200px) and (max-width: 770px) {
     body {
@@ -275,23 +360,8 @@ body{
     #header > img{
         width: 20%;
     }
-    #cont > h2{
-        margin-top: 50px;
-        margin-top: 12px;
-        margin-bottom: 20px;
-    }
-    #personal {
-        grid-template-columns: repeat(1 ,1fr);
-    }
-    #parent {
-        grid-template-columns: repeat(1,1fr);
-    }
-    #previousStandards {
-        grid-template-columns: repeat(1 ,1fr);
-    }
+    
 }
 @media screen and (min-width: 771px) and (max-width: 1250px){
-    #personal {
-        grid-template-columns: repeat(2 ,1fr);
-    }
+    
 }
