--- a/Jahir/register.css
+++ b/Jahir/register.css
@@ -181,7 +181,7 @@ textarea{
   display: grid;
   grid-template-columns: repeat(2,1fr);
   margin: auto;
-  margin-top: 100px;
+  margin-top: 50px;
   gap: 50px;
 }
 #formTwo{
@@ -196,6 +196,7 @@ textarea{
   display: flex;
   justify-content: flex-end;
   gap: 20px;
+  margin-right: 50px;
 }
 #updateBTN{
   display: none;
