--- a/Jahir/register.css
+++ b/Jahir/register.css
@@ -22,7 +22,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color:rgb(143, 239, 248);
   }
   
   .nav > div:nth-child(1) {
@@ -138,9 +138,6 @@ body {
   box-sizing: border-box;
 }
 
-body {
-  
-}
 
 form{
   display: flex;
@@ -150,7 +147,7 @@ form{
   border-radius: 20px;
   overflow: hidden;
   gap: 10px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 label,input{
@@ -177,7 +174,7 @@ textarea{
   font-size: 15px;
 }
 #mainContainer {
-  width: 70%;
+  width: 75%;
   display: grid;
   grid-template-columns: repeat(2,1fr);
   margin: auto;
@@ -312,6 +309,58 @@ background-color: #1e293b;
 color: #fff;
 }
 
+/*------> footer <------*/
+
+.footer {
+  background-color: #fffaf5;
+  margin-top: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.footer > div:nth-child(1) {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 50px;
+  justify-content: space-around;
+}
+
+.footer > div:nth-child(1) > div {
+  width: 100%;
+}
+.footer p{
+  margin: 20px;
+  margin-left: 0px;
+}
+#line2 {
+  width: 2px;
+  background-color: rgb(28, 28, 28);
+  margin-left: 70px;
+  margin-right: 70px;
+  transform: rotate(10deg);
+}
+
+.footer > div:nth-child(1) > div:nth-child(3) > div {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 1px;
+  border-color: lightgray;
+}
+
+.footer > div:nth-child(2) {
+  display: flex;
+  width: 90%;
+  gap: 20px;
+  margin: auto;
+  border-top: solid 1px;
+  border-color: lightgray;
+  justify-content: space-between;
+}
+
+/*------> footer <------*/
+
+
 @media (min-width: 768px) {
 .nextBTN {
   font-size: 1.125rem;
@@ -361,8 +410,69 @@ color: #fff;
     #header > img{
         width: 20%;
     }
-    
+    #mainContainer{
+      width: 80%;
+    }
+    #searchData{
+      margin-top: 30px;
+      margin-right: 0;
+      gap: 10px;
+    }
+    #nextBTN{
+      font-size: 13px;
+      width: 100%;
+    }
+    #updateBTN{
+      font-size: 13px;
+      width: 100%;
+    }
+    #submitBTN{
+      font-size: 13px;
+      width: 100%;
+    }
+
+    input,textarea ,select{
+      padding-left: 10px;
+      height: 30px;
+    }
+    /*------> footer <------*/
+
+  .footer > div:nth-child(1) {
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .footer > div:nth-child(1) > #line2 {
+    display: none;
+  }
+
+  .footer > div:nth-child(1) > div:nth-child(3) div {
+    flex-direction: column;
+  }
+
+  .footer > div:nth-child(1) > div:nth-child(3) div p {
+    margin: 5px;
+  }
+
+  .footer > div:nth-child(2) {
+    flex-direction: column;
+    gap: 0;
+    border: none;
+  }
+
+  .footer > div:nth-child(2) p {
+    margin: 5px;
+  }
 }
-@media screen and (min-width: 771px) and (max-width: 1250px){
-    
+@media screen and (min-width: 771px) and (max-width: 1400px)
+{
+  #updateBTN{
+    width: 70%;
+  }
+  #submitBTN{
+    width: 70%;
+  }
+  #nextBTN{
+    width: 70%;
+  }
 }
