--- a/Amol/courses.css
+++ b/Amol/courses.css
@@ -2,15 +2,96 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
-body{
+
+body {
   background-image: url("./bg.jpg");
+margin: 0;
 }
+
+/* navbar */
+
+.nav {
+ 
+ 
+  padding: 0.7%;
+  margin-bottom: 3%;
+  border-bottom: white solid 1.5px;
+ 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* border: solid orange 1px; */
+  border-radius: 10px;
+}
+
+.nav>div:nth-child(1) {
+  width: 15%;
+  padding-left: 10px;
+}
+
+.nav>div:nth-child(1) a {
+  color: black;
+  color: orange;
+  color: greenyellow;
+  text-decoration: none;
+}
+
+.nav>div:nth-child(1) h1 {
+  font-size: 230%;
+  margin: auto;
+  font-family: 'Bruno Ace SC', cursive;
+  cursor: pointer;
+}
+
+.nav>div:nth-child(2) {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.nav>div:nth-child(2)>a {
+  color: black;
+  color: orange;
+  letter-spacing: 1px;
+
+  text-decoration: none;
+  font-size: large;
+}
+
+.nav>div:nth-child(2)>a:hover {
+  color: orangered;
+
+}
+
+.nav button {
+  border-radius: 10px;
+  width: 120px;
+  height: 55px;
+  border: none;
+  color: teal;
+  font-family: "Poppins", sans-serif;
+  background-color: black;
+  background-color: hsl(84, 76%, 66%);
+  font-size: 18px;
+  cursor: pointer;
+  
+}
+
+.nav button:hover {
+
+  color: orange;
+  border: solid 0.5px;
+
+}
+
+/* navbar */
 #heading-div {
   text-align: left;
   padding: 1%;
   padding-left: 10%;
   padding-right: 10%;
- 
+
 
   height: fit-content;
   margin-bottom: 4%;
@@ -35,11 +116,9 @@ body{
   width: 80%;
   margin: auto;
   display: grid;
-  grid-template-rows: auto;
-  gap: 2%;
-  height: 1fr;
+  
 
-  box-sizing: border-box;
+
 }
 
 #card {
@@ -50,6 +129,8 @@ body{
   gap: 2%;
   padding: 1%;
   transition: 0.4s;
+height: 1fr;
+margin-bottom: 5%;
 }
 
 #card:hover {
@@ -61,14 +142,14 @@ body{
   box-sizing: border-box;
   margin-right: 2%;
   box-sizing: border-box;
-  
+
 }
 
 #course-image>img {
   width: 100%;
   height: 100%;
   border-radius: 7%;
-  
+
 }
 
 #course-info {
@@ -117,7 +198,7 @@ body{
 
 #price-title {
   font-size: large;
-
+font-weight: 600;
 }
 
 #price-data {
@@ -160,5 +241,59 @@ body{
   background-color: rgb(13, 110, 253);
   padding: 1%;
   width: 20%;
+  transition: .3s;
+}
+#explorebtn:hover{
+  background-color: rgb(9, 9, 210);
+}
 
+#explorebtn:active{
+  scale: 0.9;
+  
+}
+/* footer */
+
+.footer {
+ 
+  background-color: #fffaf5;
+   padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.footer>div:nth-child(1) {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 50px;
+
+  justify-content: space-around;
+}
+
+.footer>div:nth-child(1)>div {
+  width: 100%;
+}
+
+#line2 {
+  width: 2px;
+  background-color: rgb(28, 28, 28);
+  margin-left: 70px;
+  margin-right: 70px;
+  transform: rotate(10deg);
+}
+
+.footer>div:nth-child(1)>div:nth-child(3)>div {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 1px;
+  border-color: lightgray;
+}
+
+.footer>div:nth-child(2) {
+  display: flex;
+  width: 90%;
+  gap: 20px;
+  margin: auto;
+  border-top: solid 1px;
+  border-color: lightgray;
+  justify-content: space-between;
 }
