After Login part and Deletion Part Added only for User home.html file

--- a/Pavan/userHome.css
+++ b/Pavan/userHome.css
@@ -111,6 +111,9 @@ body {
   display: flex;
   justify-content: space-between;
 }
+#register{
+  font-size: 25px;
+}
 
 /*------> nav bar <------*/
 
